--- a/index.html
+++ b/index.html
@@ -2,40 +2,25 @@
 <html>
 
 <head>
-  <title>Makena's Homepage</title>
+  <title>Makena's Courselist</title>
 </head>
 <body>
 
 <center>
   <div class="header">
-    Makena Harris A323 Website
+    Makena's Courselist
   </div>
-
-  <img src="photos/7.jpg" style="width:20%;">
-
   <br>
   <br>
 </center> 
 
    <p> 
-    Projects:
+    Classes:
     <ul>
-    	<li><a href="http://mharris13.github.io/interactivemedia323/Project1/">Project 1</a> </li>
-    	<li><a href="http://mharris13.github.io/interactivemedia323/project2/">Project 2</a> </li>
-      <li><a href="http://mharris13.github.io/interactivemedia323/project3/1">Project 3</a> </li>
+    	<li><a href="http://mharris13.github.io/interactivemedia323/">A323: Interactive Media I</a> </li>
+    	<li><a href="http://mharris13.github.io/interactivemedia324">A324: Interactive Media II</a> </li>
     </ul>
   </p>
-
-  <p>
-    Exercises:
-    <ul>
-    	<li><a href="http://mharris13.github.io/interactivemedia323/Exercise 1">Exercise 1</a></li>
-    	<li><a href="http://mharris13.github.io/interactivemedia323/Exercise2/">Exercise 2a</a></li>
-      <li><a href="http://mharris13.github.io/interactivemedia323/exercise3">Exercise 3</a></li>
-      <li><a href="http://mharris13.github.io/interactivemedia323/exercise4">Exercise 4</a></li>
-    </ul>
-  </p>
-
 
 <b><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a></b>
 
