--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
 </head>
 <body>
 
-<center>
+  
+  <div class="subheader">
+    Hello, my name is Makena.
+    <br>
+  </div>
+
   <div class="header">
-    Makena's Courselist
+    Welcome to
+    <br>
+    my Course List.
   </div>
   <br>
   <br>
-</center> 
 
-   <p> 
-    Classes:
+
     <ul>
     	<li><a href="http://mharris13.github.io/interactivemedia323/">A323: Interactive Media I</a> </li>
     	<li><a href="http://mharris13.github.io/interactivemedia324">A324: Interactive Media II</a> </li>
+      <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a> </li>
     </ul>
-  </p>
 
-<b><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a></b>
 
 
 
@@ -32,15 +36,23 @@ body {
   font-size: 14pt;
 }
 
-#circle {
-  border-radius: 100%;
+.header {
+  font-family: "Helvetica";
+  font-size: 65pt;
+  line-height: 95%;
+  font-weight: bold;
+  letter-spacing: 0pt;
+  text-align: left;
+  color: black;
 }
 
-.header {
-  font-family: "avenir";
-  font-size: 30pt;
-  letter-spacing: 20pt;
-  text-align: center;
+.subheader {
+  font-family: "Helvetica";
+  font-size: 20pt;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 0pt;
+  text-align: left;
   color: black;
 }
 
