--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   </div>
 
   <div class="header">
-    Welcome to
-    <br>
-    my Course List.
+    welcome.
   </div>
   <br>
   <br>
@@ -25,7 +23,7 @@
     	<li><a href="http://mharris13.github.io/interactivemedia323/">A323: Interactive Media I</a> </li>
     	<li><a href="http://mharris13.github.io/interactivemedia324">A324: Interactive Media II</a> </li>
       <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a> </li>
-      <li><a href="http://mharris13.github.io/interactivemedia324/stuff">StuffI</a> </li>
+      <li><a href="http://mharris13.github.io/interactivemedia324/stuff">Digital Portfolio Pieces</a> </li>
     </ul>
 
 
