--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   
   <div class="subheader">
-    Hello, my name is Makena
+    Hello, my name is Makena.
     <br>
   </div>
 
@@ -37,7 +37,7 @@ body {
 
 .header {
   font-family: "Helvetica";
-  font-size: 65pt;
+  font-size: 85pt;
   line-height: 95%;
   font-weight: bold;
   letter-spacing: 0pt;
