--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
   
   <div class="subheader">
-    Hello, my name is Makena.
+    Hello, my name is Makena,
     <br>
   </div>
 
   <div class="header">
-    welcome.
+    & welcome to my website.
   </div>
   <br>
   <br>
@@ -37,10 +37,11 @@ body {
 
 .header {
   font-family: "Helvetica";
-  font-size: 85pt;
-  line-height: 95%;
+  font-size: 95pt;
+  line-height: 35%;
   font-weight: bold;
-  letter-spacing: 0pt;
+  letter-spacing: -6pt;
+  opacity: 0.08;
   text-align: left;
   color: black;
 }
@@ -50,7 +51,7 @@ body {
   font-size: 20pt;
   font-weight: bold;
   color: white;
-  letter-spacing: 0pt;
+  letter-spacing: -1pt;
   text-align: left;
   color: black;
 }
