--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     	<li><a href="http://mharris13.github.io/interactivemedia323/">A323: Interactive Media I</a> </li>
     	<li><a href="http://mharris13.github.io/interactivemedia324">A324: Interactive Media II</a> </li>
       <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a> </li>
-      <li><a href="http://mharris13.github.io/digital.html">Digital Portfolio Pieces</a> </li>
+      <li><a href="http://mharris13.github.io/Digital.html">Digital Portfolio Pieces</a> </li>
     </ul>
 
 
