--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
   </div>
 
   <div class="header">
-    & welcome to my website!!!
+    & welcome to my website.
   </div>
   <br>
   <br>
 
 
     <ul>
-    	<li><a href="http://mharris13.github.io/interactivemedia323/">A323: Interactive Media I</a> </li>
+    	<li><a href="http://mharris13.github.io/interactivemedia323/" target="_blank">A323: Interactive Media I</a> </li>
     	<li><a href="http://mharris13.github.io/interactivemedia324">A324: Interactive Media II</a> </li>
       <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a> </li>
       <li><a href="http://mharris13.github.io/Digital.html">Digital Portfolio Pieces</a> </li>
+
+
+
     </ul>
 
 
@@ -37,7 +40,7 @@ body {
 
 .header {
   font-family: "Helvetica";
-  font-size: 95pt;
+  font-size: 90pt;
   line-height: 35%;
   font-weight: bold;
   letter-spacing: -6pt;
