--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <ul>
     	<li><a href="http://mharris13.github.io/interactivemedia323/" target="_blank">A323: Interactive Media I</a> </li>
-    	<li><a href="http://mharris13.github.io/interactivemedia324">A324: Interactive Media II</a> </li>
-      <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite">Class Website</a> </li>
-      <li><a href="http://mharris13.github.io/Digital.html">Digital Portfolio Pieces</a> </li>
+    	<li><a href="http://mharris13.github.io/interactivemedia324" target="_blank">A324: Interactive Media II</a> </li>
+      <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite" target="_blank">Class Website</a> </li>
+      <li><a href="http://mharris13.github.io/Digital.html" target="_blank">Digital Portfolio Pieces</a> </li>
 
 
 
