--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
 
 
     <ul>
-    	<li><a href="http://mharris13.github.io/interactivemedia323/" target="_blank">A323: Interactive Media I</a> </li>
+    	<!-- <li><a href="http://mharris13.github.io/interactivemedia323/" target="_blank">A323: Interactive Media I</a> </li>
     	<li><a href="http://mharris13.github.io/interactivemedia324" target="_blank">A324: Interactive Media II</a> </li>
       <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite" target="_blank">Class Website</a> </li>
+      <li><a href="http://mharris13.github.io/Digital.html" target="_blank">Digital Portfolio Pieces</a> </li> -->
+
+
+      <li><a href="https://projects.invisionapp.com/share/2N8WYY085#/screens/164237396" target="_blank">College Eats App</a> </li>
+      <li><a href="http://mharris13.github.io/interactivemedia324" target="_blank">A324: Interactive Media II</a> </li>
+      <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite" target="_blank">Class Website</a> </li>
       <li><a href="http://mharris13.github.io/Digital.html" target="_blank">Digital Portfolio Pieces</a> </li>
-
-
-
     </ul>
 
 
