--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
       <li><a href="https://projects.invisionapp.com/share/2N8WYY085#/screens/164237396" target="_blank">College Eats App</a> </li>
-      <li><a href="http://mharris13.github.io/interactivemedia324" target="_blank">A324: Interactive Media II</a> </li>
+      <li><a href="http://mharris13.github.io/courselist/coexist" target="_blank">coexist</a> </li>
       <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite" target="_blank">Class Website</a> </li>
       <li><a href="http://mharris13.github.io/Digital.html" target="_blank">Digital Portfolio Pieces</a> </li>
     </ul>
