--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Makena's Courselist</title>
+  <title>makenaeliza</title>
 </head>
 <body>
 
@@ -27,9 +27,16 @@
 
 
       <li><a href="https://projects.invisionapp.com/share/2N8WYY085#/screens/164237396" target="_blank">College Eats App</a> </li>
-      <li><a href="http://mharris13.github.io/courselist/coexist" target="_blank">coexist</a> </li>
-      <li><a href="http://mharris13.github.io/interactivemedia323/classwebsite/a323classwebsite" target="_blank">Class Website</a> </li>
-      <li><a href="http://mharris13.github.io/Digital.html" target="_blank">Digital Portfolio Pieces</a> </li>
+
+      <li><a href="http://mharris13.github.io/courselist/coexist" target="_blank">COEXIST</a> </li>
+
+      <li><a href="http://mharris13.github.io/interactivemedia323/project2/" target="_blank">'The Saturday Afternoon Blues'</a> </li>
+
+      <li><a href="http://mharris13.github.io/interactivemedia323/project3/1" target="_blank">it's a man thing</a> </li>
+
+      <li><a href="http://mharris13.github.io/interactivemedia324/project1/" target="_blank">Relationship Receipts</a> </li>
+
+      <li><a href="http://mharris13.github.io/interactivemedia324/project2/" target="_blank">Trump Dump</a> </li>
     </ul>
 
 
